Fixed some scrolling overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -536,6 +536,12 @@ aside .logo img {
   border-radius: 10px;
   background-color: #1b2029;
   padding: 1em;
+  overflow-y: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+
+.profile-section::-webkit-scrollbar {
+  display: none;
 }
 
 .profile-header, .group-header {
